--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
     "require": {
         "php": "^8.2",
         "ably/ably-php": "*",
+        "ccharz/laravel-epc-qr": "^3.0",
         "jeremykenedy/laravel-roles": "^11.5",
+        "jeremykenedy/laravel-users": "^4.5",
         "jobmetric/laravel-membership": "^1.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "nwidart/laravel-modules": "*",
-        "pusher/pusher-php-server": "*"
+        "nwidart/laravel-modules": "^12.0",
+        "pusher/pusher-php-server": "*",
+        "xoco70/laravel-tournaments": "^0.17.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -65,6 +68,11 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
         }
     },
     "config": {
