--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
         "nwidart/laravel-modules": "^12.0",
+        "open-admin-ext/media-manager": "^1.0",
         "open-admin-org/open-admin": "^1.0",
         "pusher/pusher-php-server": "*",
         "xoco70/laravel-tournaments": "^0.17.0"
