--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.21.1",
+        "axios": "^1.13.2",
         "bootstrap": "^4.6.0",
         "concurrently": "^9.0.1",
         "highlight.js": "^10.5.0",
@@ -25,17 +26,26 @@
         "nprogress": "^0.2.0",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.31",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.4",
         "sass-embedded": "^1.93.2",
         "sass-loader": "^10.1.1",
         "tailwindcss": "^3.1.0",
-        "vite": "^6.2.4",
-        "vue": "^2.6.12",
-        "vue-infinite-loading": "^2.4.5",
-        "vue-loader": "^15.9.5",
+        "vite": "^5.4.21",
+        "vue": "^3.5.24",
+        "vue-loader": "^17.4.2",
         "vue-meta": "^2.4.0",
-        "vue-router": "^3.4.9",
-        "vue-template-compiler": "^2.6.12"
+        "vue-router": "^4.6.3"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.19",
+        "@fullcalendar/daygrid": "^6.1.19",
+        "@fullcalendar/interaction": "^6.1.19",
+        "@fullcalendar/list": "^6.1.19",
+        "@fullcalendar/multimonth": "^6.1.19",
+        "@fullcalendar/rrule": "^6.1.19",
+        "@fullcalendar/scrollgrid": "^6.1.19",
+        "@fullcalendar/timegrid": "^6.1.19",
+        "@fullcalendar/vue3": "^6.1.19"
     }
 }
