--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+CZECH_ACCOUNT_NUMBER=1234567890
+CZECH_BANK_CODE=0800
+CZECH_IBAN=CZ6508000000001234567890
+CZECH_BENEFICIARY="Your Company Name s.r.o."
+CZECH_CURRENCY=CZK
+
 CANVAS_STORAGE_DISK=public
 ADMIN_ROUTE_PREFIX=admin
 ADMIN_HTTPS=true
