--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
         "nwidart/laravel-modules": "^12.0",
+        "open-admin-ext/config": "^1.0",
         "open-admin-ext/media-manager": "^1.0",
         "open-admin-org/open-admin": "^1.0",
         "pusher/pusher-php-server": "*",
