--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-CZECH_ACCOUNT_NUMBER=1234567890
-CZECH_BANK_CODE=0800
 CZECH_IBAN=CZ6508000000001234567890
-CZECH_BENEFICIARY="Your Company Name s.r.o."
-CZECH_CURRENCY=CZK
+CZECH_BENEFICIARY="Společnost s.r.o."
 
 CANVAS_STORAGE_DISK=public
+CANVAS_STORAGE_PATH=canvas
 ADMIN_ROUTE_PREFIX=admin
 ADMIN_HTTPS=true
 
@@ -14,7 +12,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=cs
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -28,7 +26,7 @@ DB_PASSWORD=
 APP_MAINTENANCE_DRIVER=file
 
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=180
 SESSION_ENCRYPT=false
 
 PHP_CLI_SERVER_WORKERS=4
