--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "austintoddj/canvas": "^6.0",
         "jeremykenedy/laravel-roles": "^11.5",
         "jeremykenedy/laravel-users": "^4.5",
-        "jobmetric/laravel-membership": "^1.3",
+        "jobmetric/laravel-package-core": "*",
         "laravel/framework": "^12.0",
         "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
